fix: styles-and-spacing

--- a/styles.css
+++ b/styles.css
@@ -37,14 +37,16 @@ body {
     width: 320px;
     height: 499px;
     background-color: var(--white);
-    border-radius: 16px;
+    box-shadow: 0 25px 25px rgba(0, 0, 0, 0.05);
+    border-radius: 20px;
     padding: 16px;
 }
 
 img {
+    display: block;
     max-width: 100%;
     max-height: 65%;
-    border-radius: 12px;
+    border-radius: 10px;
 }
 
 h1, p {
